# sqlalchemy14

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  citest.py  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
sqlalchemy14/: __init__.py  __main__.py  analyzer.py  builder.py  config.py  engine.py  main.py  models.py  sql.py
tests/: conftest.py  test_inherit.py  test_integrate.py  test_sa.py  test_sql.py  test_sqlite.py
