[tool.poetry]
name = "sqlalchemy14"
version = "0.0.1"
description = "sqlalchemy14"
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/tradebot"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.6"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
uvicorn = "^0.13.4"
aiosqlite = "^0.17.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
