[tool.poetry]
name = "sqlalchemy14"
version = "0.0.1"
description = "sqlalchemy14"
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
# repository = "https://github.com/sasano8/tradebot"

[tool.poetry.dependencies]
python = "^3.8.5"
sqlalchemy = "^1.4.6"
pydantic = "^1.8.1"
asyncpg = { version = "^0.23.0", optional = true }
aiosqlite = { version ="^0.17.0", optional = true }


[tool.poetry.extras]
postgresql = ["asyncpg"]
postgres = ["asyncpg"]
pg = ["asyncpg"]
asyncpg = ["asyncpg"]
sqlite = ["aiosqlite"]
sqlite3 = ["aiosqlite"]
aiosqlite = ["aiosqlite"]


[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.3"
pre-commit = "^2.12.0"
pytest-asyncio = "^0.15.1"
asyncpg = "^0.23.0"
aiosqlite = "^0.17.0"

[tool.pytest.ini_options]
markers = [
    "docker: marks tests docker integrate",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


